# rust-prebuild-test

./: README.md  package.json  pnpm-lock.yaml  rust-prebuild-test.code-workspace
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
